--- a/JumpingGame/pom.xml
+++ b/JumpingGame/pom.xml
@@ -17,6 +17,11 @@
         <version>4.12</version>
         <scope>test</scope>
     </dependency>
+	 <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.3.176</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
